tests/stmt/tforloop_tuple_multiple_underscore.nim
discard """
  errormsg: "undeclared identifier: '_'"
"""

iterator iter(): (int, int, int) =
  yield (1, 1, 2)


for (_, i, _) in iter():
  echo _